<!-- the defeault main menu for a tjger game -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tjger.MainFrame" >

    <item 
        android:id="@+id/settings_playsound" 
        android:title="@string/settings_playsound"
        android:icon="@drawable/sound_on"
        android:showAsAction="always"></item>
    <item 
        android:id="@+id/action_preferences" 
        android:title="@string/action_preferences"
        android:icon="@drawable/preferences"></item>
    <item 
        android:id="@+id/help_instructions" 
        android:title="@string/help_instructions"></item>
    <item 
        android:id="@+id/help_gamehints" 
        android:title="@string/help_gamehints"></item>
    <item 
        android:id="@+id/help_tjger" 
        android:title="@string/help_tjger"></item>
    <item 
        android:id="@+id/action_about" 
        android:title="@string/action_about"
        android:icon="@drawable/about"></item>
    <item 
        android:id="@+id/action_gameinfo" 
        android:title="@string/action_gameinfo"></item>
    
</menu>
